--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "wg_survey_app",
-  "displayName": "현장조사 프로그램"
+  "name": "Woorimap_FieldManager",
+  "displayName": "Woorimap_FieldManager"
 }
