--- a/ios/Woorimap_FieldManager/Info.plist
+++ b/ios/Woorimap_FieldManager/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>wg_survey_app</string>
+	<string>Woorimap_FieldManager</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
