--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wg_survey_app",
+  "name": "Woorimap_FieldManager",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-camera": "^4.2.1",
+    "react-native": "0.72.4",
     "react-native-fs": "^2.20.0",
     "react-native-webview": "^13.3.1"
   },
@@ -21,20 +20,19 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.9",
+    "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.7",
+    "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
-  },
-  "homepage": "."
+  }
 }
