fix : shp 파일 레이어 추가되지 않는 현상 및 api 34 대응 가능하도록 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "noImplicitAny": false
+    // 다른 옵션들...
+  }
 }
