--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/geolocation": "^3.0.6",
     "axios": "^1.5.0",
+    "base-64": "^1.0.0",
+    "base64-js": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-device": "^1.0.1",
+    "react-native-device-info": "^10.9.0",
     "react-native-device-orientation": "^0.0.2",
     "react-native-fs": "^2.20.0",
+    "react-native-intent-launcher": "^0.2.1",
     "react-native-maps": "^1.7.1",
     "react-native-permissions": "^3.8.4",
     "react-native-webview": "^13.3.1",
@@ -31,6 +35,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/base-64": "^1.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "@types/shapefile": "^0.6.1",
